force-app/main/default/objects/Field_Service_Transaction_Field_Change__c/Field_Service_Transaction_Field_Change__c.object-meta.xml
<CustomObject>
    <label>Field Service Transaction Field Change</label>
    <nameField>
        <displayFormat>FSFC-{000000}</displayFormat>
        <label>Field Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Service Transaction Field Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>