force-app/main/default/objects/Field_Service_Transaction_Field_Change__c/fields/Field_Service_Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Transaction_Log__c</fullName>
    <label>Field Service Transaction Log</label>
    <referenceTo>Field_Service_Transaction_Log__c</referenceTo>
    <relationshipLabel>Field Service Transaction Field Changes</relationshipLabel>
    <relationshipName>Field_Service_Transaction_Field_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>